[package]
name = "conduit_core"
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "mod.rs"
crate-type = [
	"rlib",
#	"dylib",
]

[features]
#dev_release_log_level = []
release_max_log_level = [
	"tracing/max_level_trace",
	"tracing/release_max_level_info",
	"log/max_level_trace",
	"log/release_max_level_info",
]
jemalloc = [
	"dep:tikv-jemalloc-sys",
	"dep:tikv-jemalloc-ctl",
	"dep:tikv-jemallocator",
]
jemalloc_prof = [
	"tikv-jemalloc-sys/profiling",
]
jemalloc_stats = [
    "tikv-jemalloc-sys/stats",
    "tikv-jemalloc-ctl/stats",
    "tikv-jemallocator/stats",
]
hardened_malloc = [
	"dep:hardened_malloc-rs"
]
gzip_compression = [
	"reqwest/gzip",
]
brotli_compression = [
	"reqwest/brotli",
]
zstd_compression = [
    "reqwest/zstd",
]
perf_measurements = []
sentry_telemetry = []

[dependencies]
argon2.workspace = true
arrayvec.workspace = true
axum.workspace = true
bytes.workspace = true
cargo_toml.workspace = true
checked_ops.workspace = true
chrono.workspace = true
clap.workspace = true
conduit-macros.workspace = true
const-str.workspace = true
ctor.workspace = true
cyborgtime.workspace = true
either.workspace = true
figment.workspace = true
futures.workspace = true
http-body-util.workspace = true
http.workspace = true
image.workspace = true
ipaddress.workspace = true
itertools.workspace = true
libloading.workspace = true
log.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
ring.workspace = true
ruma.workspace = true
rustls.workspace = true
sanitize-filename.workspace = true
serde_json.workspace = true
serde_regex.workspace = true
serde_yaml.workspace = true
serde.workspace = true
thiserror.workspace = true
tikv-jemallocator.optional = true
tikv-jemallocator.workspace = true
tikv-jemalloc-ctl.optional = true
tikv-jemalloc-ctl.workspace = true
tikv-jemalloc-sys.optional = true
tikv-jemalloc-sys.workspace = true
tokio.workspace = true
tokio-metrics.workspace = true
toml.workspace = true
tracing-core.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(all(not(target_env = "msvc"), target_os = "linux"))'.dependencies]
hardened_malloc-rs.workspace = true
hardened_malloc-rs.optional = true

[lints]
workspace = true
