[package]
name = "conduit_database"
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "mod.rs"
crate-type = [
	"rlib",
#	"dylib",
]

[features]
dev_release_log_level = []
release_max_log_level = [
	"tracing/max_level_trace",
	"tracing/release_max_level_info",
	"log/max_level_trace",
	"log/release_max_level_info",
]
rocksdb = [
	"dep:rust-rocksdb",
]
jemalloc = [
	"rust-rocksdb/jemalloc",
]
io_uring = [
	"rust-rocksdb/io-uring",
]
zstd_compression = [
	"rust-rocksdb/zstd",
]

[dependencies]
chrono.workspace = true
conduit-core.workspace = true
log.workspace = true
lru-cache.workspace = true
ruma.workspace = true
rust-rocksdb.optional = true
rust-rocksdb.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
